indycast.net/assets/css/main.css
/* ... */
@media screen and (max-width: 480px) {
  header.major {
    padding-left: 1em;
    padding-right: 1em;
  }
  footer.major {
    padding-left: 1em;
    padding-right: 1em;
  }
  ul.icons li {
    padding: 0.2em;
  }
  input[type="submit"],
  .button {
    display: block;
    width: 100%;
  }
  .box { padding: 2em 1em; }
  .feature { margin-bottom: 1em; }
  .feature .content {
    padding: 2em 1em !important;
  }
  #main {
    padding-left: 1em;
    padding-right: 1em;
  }
  #footer {
    margin-top: -80px;
    padding-left: 1em;
    padding-right: 1em;
  }
  #footer .copyright li {
    border: 0;
    display: block;
    margin: 0;
    padding: 0.75em 0 0 0;
  }
  #header {
    padding-left: 2em;
    padding-right: 2em;
  }
  #header br { display: none; }
  .big-button { max-width: 100%; }
  .big-button,
  #podcast-link { 
    overflow: hidden;
  }
}
form#donate {
  text-align:center;
  margin-top: 0;
}
.big-button {
  text-transform: none;
  white-space: normal;
}
.big-button h3 { font-size: 1.3em }
.big-button.disabled, .disabled .big-button { 
  color: grey;
  border-color: silver;
  cursor: default;
  background: #666466;
  opacity: 0.7;
}
.disabled .big-button:hover, .big-button.disabled:hover {
  background: #666466;
  box-shadow: 0 0;
}
#description a {
  color: #4EB880;
}
#description h2 {
  text-align: left;
  margin-bottom: 0.25em;
  color: rgba(255,255,255,0.9);
  border-bottom: 1px solid rgba(255,255,255,0.7);
}
#description p {
  margin: 0.45em 0;
  line-height: 1.35em;
}
#description {
  margin: 0.75em;
  z-index: 100;
  padding: 0.35em 0.75em;
  position: absolute;
  display: block;
  right: 0;
  border-radius: 4px;
  color: white;
  display: none;
  background: rgba(0,0,0,0.55);
}
#time-controls * {
  text-align: right;
}
#ampm a{
  width: 100%;
  line-height: 45px;
  text-align: center;
  padding: 0;
}
.big-button h3 {
  font-weight: normal;
  font-size: 1.6em;
  letter-spacing: normal;
  color: white;
  margin: 0;
  text-transform: none;
  display: inline-block;
  line-height: 1em;
}
#rss-top {
  text-align: left;
}
/* from http://stackoverflow.com/questions/10698900/css-two-column-full-width */
#rss-img { 
  color: white;
  float: left;
  height: auto; 
  font-size: 40px; 
  width: 40px; 
}
#rss-header {
  line-height: 1em;
  text-align: left;
  font-weight: normal;
  margin-left: 40px;
}
#rss-title {
  font-weight: bold;
  text-align: left;
}
#rss-time { 
  display: block; 
  width: 15em;
}
.big-button img {
  vertical-align: bottom;
  display: inline-block;
}
.big-button {
  cursor: pointer;
  color: white;
  font-weight: bold;
  text-align: left;
  display: inline-block;
  font-size: 1.3em;
  border-radius: 8px;
  padding: 0.5em;
  border: 2px solid rgba(78, 185, 128, 1);
  background: rgba(78, 185, 128, 0.85);
}
#podcast-link { 
  display: block;
  color: black;
  text-decoration: none;
  border-bottom: 0;
}
#start {
  text-align: left;
  vertical-align: top;
  height: 42px;
  border-radius: 8px;
}
#station-search-box {
  margin-left: 12px;
  margin-bottom: 0.5em;
}
#station-query {
  margin-left: -32px;
  padding-left: 32px;
  width: 14em;
}
#station {
  margin-bottom: 0.5em;
  height: 152px;
  overflow-x: auto;
  overflow-y: hidden;
}
#station li {
  margin: 0.15em;
}
#ampm {
  margin-left: -21.8em;
  border: 0;
  margin-top: 2px;
  border-radius: 0 8px 8px 0;
}
#ampm a {
  line-height: 38px;
}
#ampm li {
  width: 3em;
  margin-bottom: 0;
}
small { 
  font-size: 0.7em;
}
#day > :first-child a,
#duration > :first-child a {
  border-radius: 8px 0 0 8px;
}
#day > :last-child a,
#duration > :last-child a {
  border-radius: 0 8px 8px 0;
}
@media screen and (max-width: 1280px) {
  #day-picker label { 
    text-align: right;
  }
  #description { bottom: 0; }
  #rss-time { font-size: 0.75em }
  #podcast-link { font-size: 90%; }
  #or {
    display: block;
    font-size: 1.5em;
    margin: 0.35em;
  }
  #ampm a{
    line-height: 38px;
  }
  .active-list .button {
    margin: 0;
  }
  #station-search-box {
    display: none
  }
  #station {
    height: 202px;
  }
}
/* Keep the hover effect off of mobile */
@media screen and (min-width: 1280px) {
  a {
    -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
    -webkit-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
    -ms-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
    transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
  }
  input[type="submit"],
  .button {
    -moz-appearance: none;
    -webkit-appearance: none;
    -ms-appearance: none;
    appearance: none;
    -moz-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
    -webkit-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
    -ms-transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
  }
  a:hover {
    border-bottom-color: transparent;
  }
  input[type="submit"]:hover,
  .button:hover {
    background: #6e6570;
  }
  ul.icons li a:hover, ul.icons li span:hover,
  .button.alt:hover {
    background: rgba(224, 224, 224, 0.15);
  }
  #footer input[type="submit"]:hover,
  #footer .button:hover {
    background: rgba(224, 224, 224, 0.15);
    color: #ffffff;
  }
  #footer .copyright li a:hover, #footer .copyright li span:hover {
    color: #ffffff;
  }
  .big-button:hover {
    background: #3C9767;
    box-shadow: inset 0 0 10px 3px rgba(78, 185, 128, 0.85);
  }
  #station {
    overflow-y: scroll;
  }
}
@media screen and (min-width: 768px) {
  .navbar { top: -50px }
  .side-nav { top: 0 }
  #podcast-done {
    margin-left: -20px;
    margin-right: 20px;
    text-align: center;
  }
  #dl-buttons {
    text-align: center;
  }
} 
/* ... */

